Update index.html ajout  du menu de sélections des langues

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
 <!-- partial:index.partial.html -->
 <!DOCTYPE html>
-<html lang="fr">
+<div>
+  <a href="index.html">🇫🇷 Français</a> | 
+  <a href="index-en.html">🇬🇧 English</a> | 
+  <a href="index-es.html">🇪🇸 Español</a> | 
+  <a href="index-ja.html">🇯🇵 日本語</a> | 
+  <a href="index-ko.html">🇰🇷 한국어</a> | 
+  <a href="index-zh.html">🇨🇳 中文</a> | 
+  <a href="index-pt.html">🇵🇹 Português</a> | 
+  <a href="index-ar.html">🇸🇦 العربية</a>
+</div>
+
 
 <head>
   <meta charset="UTF-8">
